@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2705 2004/04/01 01:01:09 druzus Exp $
+ * $Id: ChangeLog,v 1.2706 2004/04/01 09:35:35 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-01 13:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/compiler/genc.c
+  * xharbour/source/rtl/gtxvt/gtxvt.c
+    * warnings cleaned
+
 2004-04-01 16:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * contrib/libct/dbftools.c
   * source/clipsamp/dbf.c
